@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-11T08:27:26Z",
-  "count_outdated" : 450,
-  "uniques_outdated" : 41,
-  "count" : 610,
-  "uniques" : 47,
+  "timestamp" : "2022-08-12T08:28:04Z",
+  "count_outdated" : 451,
+  "uniques_outdated" : 42,
+  "count" : 611,
+  "uniques" : 48,
   "views" : [
-    {
-      "timestamp": "2022-07-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-07T00:00:00Z",
       "count": 75,
@@ -42,6 +35,13 @@
     },
     {
       "timestamp": "2022-08-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-12T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
