@@ -3,11 +3,6 @@
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2022-07-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-08-07T00:00:00Z",
       "count": 75,
       "uniques": 1
@@ -29,6 +24,11 @@
     },
     {
       "timestamp": "2022-08-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-12T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
